--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
