--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^5.3.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "uuid": "^10.0.0"
