--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "@types/node": "^20.14.10",
+    "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
