--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "homepage": "https://github.com/iamfiro/jiwonbot#readme",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "discord.js": "^14.21.0",
-    "dotenv": "^17.2.0"
+    "dotenv": "^17.2.0",
+    "i18next": "^25.3.2",
+    "i18next-fs-backend": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "eslint": "^9.30.1",
     "nodemon": "^3.1.10",
+    "prisma": "^6.11.1",
     "tsconfig-paths": "^4.2.0"
   }
 }
