--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "discord.js": "^14.21.0",
-    "dotenv": "^17.2.0",
-    "i18next": "^25.3.2",
-    "i18next-fs-backend": "^2.6.0"
+    "dotenv": "^17.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
