--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "jiwonbot",
-  "version": "1.0.0",
-  "description": "quickly and fairly assigns balanced teams for in-house matches with friends",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "dev:prod": "ts-node -r tsconfig-paths/register src/index.ts",
-    "lint": "eslint . --ext .ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iamfiro/jiwonbot.git"
-  },
-  "keywords": [
-    "game"
-  ],
-  "author": "iamfiro",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iamfiro/jiwonbot/issues"
-  },
-  "homepage": "https://github.com/iamfiro/jiwonbot#readme",
-  "dependencies": {
-    "@prisma/client": "^6.11.1",
-    "discord.js": "^14.21.0",
-    "dotenv": "^17.2.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "eslint": "^9.30.1",
-    "nodemon": "^3.1.10",
-    "prisma": "^6.11.1",
-    "tsconfig-paths": "^4.2.0"
-  }
+	"name": "jiwonbot",
+	"version": "1.0.0",
+	"description": "quickly and fairly assigns balanced teams for in-house matches with friends",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node -r tsconfig-paths/register dist/index.js",
+		"build": "tsc",
+		"dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
+		"dev:prod": "ts-node -r tsconfig-paths/register src/index.ts",
+		"lint": "eslint . --ext .ts"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/iamfiro/jiwonbot.git"
+	},
+	"keywords": [
+		"game"
+	],
+	"author": "iamfiro",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/iamfiro/jiwonbot/issues"
+	},
+	"homepage": "https://github.com/iamfiro/jiwonbot#readme",
+	"dependencies": {
+		"@prisma/client": "^6.11.1",
+		"discord.js": "^14.21.0",
+		"dotenv": "^17.2.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.30.1",
+		"eslint": "^9.30.1",
+		"nodemon": "^3.1.10",
+		"prisma": "^6.11.1",
+		"tsconfig-paths": "^4.2.0"
+	}
 }
