--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
 	"dependencies": {
 		"@prisma/client": "^6.11.1",
 		"discord.js": "^14.21.0",
-		"dotenv": "^17.2.0"
+		"dotenv": "^17.2.0",
+		"module-alias": "^2.2.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.30.1",
+		"@types/module-alias": "^2.0.4",
 		"eslint": "^9.30.1",
 		"nodemon": "^3.1.10",
 		"prisma": "^6.11.1",
